--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
   "license": "BSD-3-Clause",
   "require": {
     "yiisoft/yii2": "~2.0.0",
-    "yuncms/yii2-user": ">=1.1.5"
+    "yuncms/yii2-user": "~1.4.0"
   },
   "autoload": {
     "psr-4": {
