--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,10 @@
     "comment"
   ],
   "type": "yii2-extension",
-  "license": "BSD-3-Clause",
+  "license": "MIT",
   "require": {
-    "yiisoft/yii2": "~2.0",
-    "yuncms/yii2-user": "~2.0"
+    "yiisoft/yii2": "~2.0.0",
+    "yuncms/yii2-user": "~2.0.0"
   },
   "autoload": {
     "psr-4": {
