--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,10 @@
     "psr-4": {
       "yuncms\\comment\\": ""
     }
+  },
+  "extra": {
+    "branch-alias": {
+      "dev-master": "2.0-dev"
+    }
   }
 }
