--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,20 @@
     }
   },
   "extra": {
+    "yuncms": {
+      "name": "comment",
+      "i18n": {
+        "class": "yii\\i18n\\PhpMessageSource",
+        "basePath": "@yuncms/comment/message"
+      },
+      "migrationNamespace": "@yuncms/comment/migrations",
+      "backend": {
+        "class": "yuncms\\comment\\backend\\Module"
+      },
+      "frontend": {
+        "class": "yuncms\\comment\\frontend\\Module"
+      }
+    },
     "branch-alias": {
       "dev-master": "2.0-dev"
     }
