--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
       "name": "comment",
       "i18n": {
         "class": "yii\\i18n\\PhpMessageSource",
+        "sourceLanguage": "en-US",
         "basePath": "@yuncms/comment/message"
       },
       "migrationNamespace": "yuncms\\comment\\migrations",
